<resources>
    <string name="app_name">SudokuApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lvl_easy">Easy</string>
    <string name="lvl_hard">Hard</string>
    <string name="lvl_random">Random</string>
    <string name="sudoku_master">Sudoku Master</string>
    <string name="lvl_medium">Medium</string>
    <string name="win_text">You are a great Sudoku Master!</string>
</resources>